--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,15 +3,16 @@
         <button class="btn btn-success">New Recipe</button>
     </div>
 </div>
+<hr>
 <div class="row">
     <div class="col-xs-12">
-       <a href="#" class="list-group-item clearfix">
+       <a *ngFor="let recipe of recipes" href="#" class="list-group-item clearfix">
            <div class="pull-left">
-               <h4 class="list-group-item-heading">Recipe Name</h4>
-               <p class="list-group-item-text">Description</p>
+               <h4 class="list-group-item-heading">{{recipe.name}}</h4>
+               <p class="list-group-item-text">{{recipe.description}}</p>
            </div>
            <span class="pull-right">
-               <img src="https://sc01.alicdn.com/kf/HTB10zI_FFXXXXbHXVXXq6xXFXXXw/202690789/HTB10zI_FFXXXXbHXVXXq6xXFXXXw.jpg" alt="" class="img-response" style="max-height: 50px;">
+               <img [src]="recipe.imagePath" alt="" class="img-response" style="max-height: 50px;">
            </span>
        </a>
         <app-recipe-item></app-recipe-item>
