--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,7 +8,7 @@
     <div class="col-xs-12">
         <app-recipe-item  *ngFor="let recipeElement of recipes"
         [recipe]="recipeElement"
-        (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
+        ></app-recipe-item>
     </div>
 </div>
 
